--- a/options.html
+++ b/options.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="bootstrap.min.css">
+	<link rel="stylesheet" href="content.css">
 	<title>Фильтр для Глобальной Авантюры: Настройки</title>
 	<style>
 		#inputFlags {
@@ -18,51 +19,102 @@
 </head>
 <body>
 	<div class="container">
-		<div class="row">
+		<div class="row py-3">
 			<div class="col">
 				<h3>Фильтр для Глобальной Авантюры: Настройки</h3>
 			</div>
 		</div>
 
-		<div class="row">
+		<div class="row py-3">
 			<div class="col">
-				<div class="card mb-4">
-					<h5 class="card-header text-center">Добавить фильтр</h5>
-					<div class="card-body">
-						<form>
-							<fieldset id="fieldsetFilter" disabled="disabled">
-								<div class="form-group">
-									<input class="form-control d-inline-block w-100" type="text" name="regexp" id="inputFilter">
-									<input class="form-control d-none" type="text" name="flags" id="inputFlags" placeholder="Флаги">
-								</div>
-								<div class="form-check">
-									<input class="form-check-input" type="radio" name="type" id="radioPhrase" value="phrase" checked>
-									<label class="form-check-label" for="radioPhrase">Фраза</label>
-								</div>
-								<div class="form-check">
-									<input class="form-check-input" type="radio" name="type" id="radioRegexp" value="regexp">
-									<label class="form-check-label" for="radioRegexp">Регулярное выражение</label>
-								</div>
-								<div class="form-group text-center mt-3">
-									<button id="buttonAddFilter" class="btn btn-primary" title="Добавить">Добавить</button>
-								</div>
-							</fieldset>
-						</form>
-					</div>
-				</div>
+				<ul class="nav nav-tabs" id="tabsNav">
+					<il class="nav-item"><a href="#tabsContent" class="nav-link active" role="tab" data-target="tabFilters">Фильтры</a></il>
+					<li class="nav-item"><a href="#tabsContent" class="nav-link" role="tab" data-target="tabHelp">Справка</a></li>
+				</ul>
 			</div>
 		</div>
 
 		<div class="row">
 			<div class="col">
-				<div class="card">
-					<h5 class="card-header text-center">Фильтры</h5>
-					<ul id="filtersList" class="list-group list-group-flush">
-						<li class="list-group-item"></li>
-					</ul>
+				<div class="tab-content" id="tabsContent">
+					<div class="tab-pane fade show active" id="tabFilters" role="tabpanel">
+
+						<div class="row">
+							<div class="col">
+								<div class="card mb-4">
+									<h5 class="card-header text-center">Добавить фильтр</h5>
+									<div class="card-body">
+										<form>
+											<fieldset id="fieldsetFilter" disabled="disabled">
+												<div class="form-group">
+													<input class="form-control d-inline-block w-100" type="text" name="regexp" id="inputFilter">
+													<input class="form-control d-none" type="text" name="flags" id="inputFlags" placeholder="Флаги">
+												</div>
+												<div class="form-check">
+													<input class="form-check-input" type="radio" name="type" id="radioPhrase" value="phrase" checked>
+													<label class="form-check-label" for="radioPhrase">Фраза</label>
+												</div>
+												<div class="form-check">
+													<input class="form-check-input" type="radio" name="type" id="radioRegexp" value="regexp">
+													<label class="form-check-label" for="radioRegexp">Регулярное выражение</label>
+												</div>
+												<div class="form-group text-center mt-3">
+													<button id="buttonAddFilter" class="btn btn-primary" title="Добавить">Добавить</button>
+												</div>
+											</fieldset>
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="col">
+								<div class="card">
+									<h5 class="card-header text-center">Фильтры</h5>
+									<ul id="filtersList" class="list-group list-group-flush">
+										<li class="list-group-item"></li>
+									</ul>
+								</div>
+							</div>
+						</div>
+
+					</div>
+					<div class="tab-pane fade" id="tabHelp" role="tabpanel">
+
+						<div class="row">
+							<div class="col">
+								<h4>Фильтры</h4>
+								<p>
+									При загрузке страницы расширение проверяет тело каждого сообщения на наличие в тексте совпадений с фильтрами и скрывает сообщения,
+									в которых совпадения найдены. Фильтр может быть двух видов:
+								</p>
+								<ul>
+									<li>Фраза - это строка, конретный набор символов в конкретном порядке, которые должны содержаться в сообщении.
+										Регистр при этом не учитывается т.е. прописные буквы равны строчным.</li>
+									<li><a href="https://ru.wikipedia.org/wiki/Регулярные_выражения#Синтаксис" target="_blank">Регулярное выражение</a>, совместимое с JavaScript.</li>
+								</ul>
+								<h4>Треды</h4>
+								<p>
+									Ответы на сообщения принадлежат конкретным тредам, что позволяет избавиться от флуда и оффтопиков просто скрыв нужные треды.
+									Что бы скрыть тред нужно нажать кнопку <strong>Скрывать тред</strong> <span class="fg-btn fg-btni-hide-thread">&nbsp;</span>,
+									она сразу исчезнет, но изменения вступят в силу только при переходе на другую страницу или перезагрузке текущей.
+									Для достижения обратного эффекта нужно нажать <strong>Показывать тред</strong> <span class="fg-btn fg-btni-show-thread">&nbsp;</span>.
+									Если сообщение принадлежит скрытому треду, то оно будет скрыто не зависимо от содержания.
+								</p>
+								<h4>Общее</h4>
+								<p>
+									У всех скрытых сообщений будет добавлена кнопка <strong>Показать сообщение</strong>
+									<span class="fg-btn fg-btni-show-message">&nbsp;</span>, нажав на которую можно раскрыть сообщение.
+								</p>
+							</div>
+						</div>
+
+					</div>
 				</div>
 			</div>
 		</div>
+
 	</div>
 
 	<script src="options.js"></script>
